# printer-map

./: .gitignore  LICENSE  README.md  pyproject.toml
src/printer_map/: __init__.py  config.py  formatters.py  ipp_client.py  main.py  mdns_discovery.py  models.py  scanner.py  snmp_discovery.py
tests/: __init__.py
tests/property/: test_cli_properties.py  test_config_properties.py  test_discovery_properties.py  test_formatter_properties.py  test_model_properties.py  test_scanner_properties.py
tests/unit/: test_config.py  test_formatters.py  test_ipp_client.py  test_main.py  test_mdns_discovery.py  test_models.py  test_scanner.py  test_snmp_discovery.py
