[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "printer-map-cli"
version = "0.1.0"
description = "A CLI tool that discovers printers on the local network using mDNS, SNMP, and IPP protocols"
requires-python = ">=3.10"
dependencies = [
    "zeroconf",
    "pysnmp",
    "aiohttp",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
printer-map = "printer_map.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
